Editing some text

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                         >city,ex.</span
                     >
                     <br /><br />
-                    "ex" stands for the initials of your country(only the first
-                    two letters).
+                    "ex" stands for the initials of your country(only two letters).
                 </p>
             </div>
         </div>
