Added some style and animations

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                 </section>
             </div>
-            <span id="msg">Lorem ipsum dolor</span>
+            <span id="msg"></span>
             <div class="main none">
                 <svg
                     viewBox="0 0 48 48"
@@ -49,7 +49,8 @@
                         >city,ex.</span
                     >
                     <br /><br />
-                    "ex" stands for the initials of your country(only two letters).
+                    "ex" stands for the initials of your country(only two
+                    letters).
                 </p>
             </div>
         </div>
